[style]: Add css in global style files to fix Mbi widget visibility (#1493)

--- a/centreon/www/Themes/Centreon-Dark/variables.css
+++ b/centreon/www/Themes/Centreon-Dark/variables.css
@@ -234,5 +234,8 @@
     --bt-danger-hover-font-color: var(--color-white);
     --view-body-portlet-border-color: var(--color-divider-dark);
     --chart-legend-color: var(--color-white);
-
+    /* license manager error page variables */
+    --license-manager-error-message-color: var(--color-primary-dark);
+    /* widget progress bar value color */
+    --widget-progress-bar-value-color: var(--color-white);
 }
